Fix iScroll blurry rendering on iOS

--- a/src/static/css/mobile.less
+++ b/src/static/css/mobile.less
@@ -210,6 +210,7 @@ div#queue-tray {
 	}
 	#student-details-panel-left {
 		padding-right: 3px;
+		-webkit-transform:translate3d(0,0,0); /* Counter blurriness on iOS */
 	}
 	#student-details-panel-right {
 		position: relative;
@@ -250,6 +251,7 @@ div#queue-tray {
 				padding: 4px 4px 4px 6px;
 				margin-bottom: 3px;
 				font-size: 12px;
+				-webkit-transform:translate3d(0,0,0); /* Counter blurriness on iOS */
 			}
 			.exception {
 				background-color: #EBCCCC;
@@ -269,6 +271,7 @@ div#queue-tray {
 			.notEvent {
 				background: none;
 				border: none;
+				-webkit-transform:translate3d(0,0,0); /* Counter blurriness on iOS */
 			}
 		}
 	}
